# Collatz-Collapse

./: .gitignore  Cargo.toml  collatz_computational_research_addendum.md  peer_review_lean4.md  readme.md  sturmian_cert_1_2.json
certificates/: descent_mod256_sample.json
claims/: claims.toml
crates/collatz-affine/: Cargo.toml  j2_census_manifest.json  zero_lift_obstruction_certificate.json
crates/collatz-affine/artifacts/phase73_0/: rust_semantic_results.json
crates/collatz-affine/src/: affine.rs  affine_interaction.rs  aperiodic_complexity.rs  core_selector.rs  counterexample_capture.rs  cross_form_cylinder.rs  execution_sequence.rs  guarded_return_classifier.rs  inversion.rs  lib.rs  lift_kernel.rs  precision_ledger.rs  projective_residues.rs  projective_system.rs  quotient_register.rs  semantic_bridge.rs  semantic_cylinders.rs  sturmian_graph.rs  symbolic_language.rs  u_block_accelerator.rs  ultrametric_machine.rs  valuation.rs
crates/collatz-affine/src/canonical_math/: branch.rs  cocycle.rs  intertwining.rs  mod.rs  types.rs
crates/collatz-affine/tests/: affine_interaction_test.rs  core_interaction_test.rs  generic_compiler_exhaustive_tests.rs  phase73b2_math_audit.rs  phase73b_math_audit.rs  phase73c_detailed_math_audit.rs  phase73d_r2_test.rs  phase73d_r_test.rs  phase73d_test.rs  phase_h1_pointwise_test.rs  phase_h2a_selector_test.rs  phase_h2b_precision_ledger_test.rs  phase_h2c_semantic_bridge_test.rs  phase_h3_complexity_benchmarks_test.rs  phase_h3b_sturmian_elimination_test.rs  phase_i_capture_tests.rs  proptest_composition.proptest-regressions  proptest_composition.rs  quotient_register_test.rs  semantic_composition_test.rs  symbolic_language_test.rs
crates/collatz-cegar/: Cargo.toml
crates/collatz-cegar/certificates/phase_6d/: finite_fuel_macrocycle_v2.json  fixed_point_word_mismatch_v1.json  infeasible_abstract_cycle_v1.json  non_returning_word_v1.json  positive_cycle_candidate_v1.json  trivial_positive_cycle_v1.json  unresolved_macrocycle_v1.json
crates/collatz-cegar/src/: abstract_domain.rs  accelerated_branch_params.rs  accelerated_invariant_search.rs  accelerated_lift.rs  accelerated_ranking.rs  accelerated_transition_system.rs  adaptive_stress_engine.rs  adversarial_corpus.rs  alphabet_manifest.rs  backward_approximant_engine.rs  backward_fixed_point_probe.rs  bounded_reachability_probe.rs  canonical_fiber_shift.rs  canonical_pullback_engine.rs  closed_walk_analyzer.rs  concretization.rs  conditional_audit_engine.rs  conditional_measure_audit.rs  coupled_invariant_miner.rs  cylinder_partition.rs  cylinder_trie_reduction.rs  destination_refinement_m72.rs  discrepancy_regression_fixtures.rs  engine.rs  exponent_soundness_engine.rs  extremal_source_search.rs  feature_counterexample_search.rs  fixed_point_synthesizer.rs  global_quotient_theorems.rs  graph_closure_m72.rs  graph_contraction_solver.rs  guarded_path.rs  guarded_return_classifier.rs  induced_v_map.rs  invariant_falsifier.rs  karp_cycle.rs  lib.rs  lift_digit_engine.rs  non_commuting_cycles.rs  one_zero_quotient_atlas.rs  (+30 more)
crates/collatz-cegar/tests/: guarded_path_test.rs  guarded_return_classifier_test.rs  phase_6d_benchmark.rs  sct_m70_regression_tests.rs
crates/collatz-cert/: Cargo.toml
crates/collatz-cert/artifacts/phase73_0/: guarded_path_uv.json  guarded_path_vu.json  mutation_test_report.json
crates/collatz-cert/artifacts/phase73a/: certificate_roundtrip_report.json  mutation_test_report.json
crates/collatz-cert/artifacts/phase73b/: mutation_test_report.json
crates/collatz-cert/artifacts/phase73b_2/: mutation_test_report.json
crates/collatz-cert/artifacts/phase73c/: mutation_test_report.json  rust_symbolic_results.json
crates/collatz-cert/src/: accelerated_ranking_verifier.rs  affine_interaction_verifier.rs  batch.rs  descent.rs  graph_contraction.rs  guarded_path_verifier.rs  lean_export.rs  lib.rs  macrocycle_theorem.rs  minus_one_countdown.rs  quotient_register_verifier.rs  scalar_lyapunov.rs  schema.rs  sct_engine.rs  symbolic_language_verifier.rs  tail.rs  ultrametric_verifier.rs  valuation_countdown.rs  verify.rs  verify_sct.rs  zero_lift_verifier.rs
crates/collatz-cert/tests/: accelerated_invariant_mutation_test.rs  accelerated_ranking_mutation_test.rs  affine_interaction_mutation_test.rs  guarded_path_mutation_test.rs  mutation_testing.rs  quotient_register_mutation_test.rs  sct_m70_regression_tests.rs  sct_mutation_testing.rs  symbolic_language_mutation_test.rs  ultrametric_mutation_test.rs  zero_lift_mutation_test.rs
crates/collatz-cli/: Cargo.toml
crates/collatz-cli/src/: main.rs
crates/collatz-core/: Cargo.toml
crates/collatz-core/src/: arithmetic.rs  lib.rs  odd_map.rs  ordinary.rs
crates/collatz-search/: Cargo.toml
crates/collatz-search/src/: beam_search.rs  lib.rs  sis_sampler.rs
crates/collatz-sieve/: Cargo.toml
crates/collatz-sieve/src/: automata.rs  cegar_prototype.rs  cover.rs  cover_manifest.rs  descent.rs  kramer.rs  krasikov_lagarias.rs  lib.rs  measure_trie.rs  minimality.rs  mod9.rs  negative_binomial.rs  odd_even_even.rs  path_merging.rs  pipeline.rs  rozier_terracol.rs  traits.rs  two_adic.rs
docs/: 00_overview_and_roadmap.md  01_mathematical_foundation.md  02_architecture_and_crates.md  03_sieves_and_pruning.md  04_cegar_and_synthesis.md  05_certificates_and_verify.md  06_experimental_suite.md  07_phase_7_1_semantic_graph_discovery.md  07_phase_7_sct_and_language_invariants.md  08_lean_vertical_slice.md  README.md
lean/: CoreInteraction.lean  EventualZeroEndpointReduction.lean  EventuallyPeriodicGhostSourceDensity.lean  FixedPeriodGhostZeroTailBound.lean  Gate1AxiomAudit.lean  Gate2OrbitBridge.lean  Gate3TimeGrowth.lean  Gate4ResidueBridge.lean  Gate5TailCompression.lean  Gate6AvoidanceReflection.lean  HeadlineKernelAudit.lean  InductiveInvariantSeparation.lean  Milestone70.lean  Milestone71.lean  Milestone72.lean  OddPrefixWitness.lean  Phase73A.lean  PhaseH1Pointwise.lean  PhaseH2BSwitching.lean  PhaseH3Complexity.lean  PhaseI1CounterexampleCapture.lean  PhaseINOrbitItineraryBridge.lean  PhaseIRAvoidanceCompletion.lean  (+20 more)
(+177 files in other folders)
