[workspace]
members = [
    "crates/collatz-core",
    "crates/collatz-affine",
    "crates/collatz-cert",
    "crates/collatz-sieve",
    "crates/collatz-search",
    "crates/collatz-cegar",
    "crates/collatz-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Collatz Research Workbench Contributors"]
rust-version = "1.75"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
proptest = "1.4"
criterion = "0.5"
roaring = "0.10"
smallvec = "1.11"
dashmap = "5.5"
lru = "0.12"
rayon = "1.8"
sha2 = "0.10"


# Internal workspace crates
collatz-core = { path = "crates/collatz-core" }
collatz-affine = { path = "crates/collatz-affine" }
collatz-cert = { path = "crates/collatz-cert" }
collatz-sieve = { path = "crates/collatz-sieve" }
collatz-search = { path = "crates/collatz-search" }
collatz-cegar = { path = "crates/collatz-cegar" }



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
