[package]
name = "collatz-affine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
collatz-core.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
collatz-cegar.workspace = true
