[package]
name = "collatz-cegar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
collatz-core.workspace = true
collatz-affine.workspace = true
collatz-cert.workspace = true
collatz-sieve.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
