[package]
name = "collatz-cegar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
collatz-core.workspace = true
collatz-affine.workspace = true
collatz-cert.workspace = true
collatz-sieve.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[[test]]
name = "phase73s1_math_audit"
path = "../../tests/phase73s1_math_audit.rs"

[[test]]
name = "phase73s1b_math_audit"
path = "../../tests/phase73s1b_math_audit.rs"

[[test]]
name = "phase73s2b_tree_audit"
path = "../../tests/phase73s2b_tree_audit.rs"

[[test]]
name = "phase73s2c_tree_audit"
path = "../../tests/phase73s2c_tree_audit.rs"

[[test]]
name = "phase73s3_refutation_test"
path = "../../tests/phase73s3_refutation_test.rs"

[[test]]
name = "phase73s3b_math_audit"
path = "../../tests/phase73s3b_math_audit.rs"

[[test]]
name = "coupled_mutation_test"
path = "../../tests/coupled_mutation_test.rs"

[[test]]
name = "phase73s3c_math_audit"
path = "../../tests/phase73s3c_math_audit.rs"

[[test]]
name = "phase73s3d_math_audit"
path = "../../tests/phase73s3d_math_audit.rs"

[[test]]
name = "phase73s3e_math_audit"
path = "../../tests/phase73s3e_math_audit.rs"

[[test]]
name = "phase73s3e_b_math_audit"
path = "../../tests/phase73s3e_b_math_audit.rs"

[[test]]
name = "phase73s3f_math_audit"
path = "../../tests/phase73s3f_math_audit.rs"

[[test]]
name = "phase73s3f_structural_atlas"
path = "../../tests/phase73s3f_structural_atlas.rs"

[[test]]
name = "phase73s3g_math_audit"
path = "../../tests/phase73s3g_math_audit.rs"

[[test]]
name = "phase73s3g_soundness_gate"
path = "../../tests/phase73s3g_soundness_gate.rs"

[[test]]
name = "phase73g4_u8_execution"
path = "../../tests/phase73g4_u8_execution.rs"

[[test]]
name = "phase73h0_e3_certification"
path = "../../tests/phase73h0_e3_certification.rs"

[[test]]
name = "phase73h0a_all_zero_core"
path = "../../tests/phase73h0a_all_zero_core.rs"

[[test]]
name = "phase73h0b_consolidation"
path = "../../tests/phase73h0b_consolidation.rs"






