[package]
name = "collatz-cert"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
collatz-core.workspace = true
collatz-affine.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true


[dev-dependencies]
proptest.workspace = true
