[package]
name = "collatz-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
collatz-core.workspace = true
collatz-affine.workspace = true
collatz-cert.workspace = true
collatz-sieve.workspace = true
smallvec.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[[bin]]
name = "collatz"
path = "src/main.rs"
