[package]
name = "collatz-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
gmp = ["rug"]

[dependencies]
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true
rug = { version = "1.24", optional = true }

[dev-dependencies]
proptest.workspace = true
