[package]
name = "collatz-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
collatz-core.workspace = true
collatz-affine.workspace = true
collatz-cert.workspace = true
collatz-sieve.workspace = true

num-bigint.workspace = true
num-traits.workspace = true
num-rational.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
rayon.workspace = true
